--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-fastapi==0.109.0
+fastapi==0.128.0
 uvicorn==0.27.0
 sqlalchemy==2.0.45
-pydantic==2.5.3
+pydantic==2.12.5
+annotated-doc==0.0.4
 pymysql==1.1.0
+requests==2.32.5
+email-validator==2.3.0
